--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "typescript project",
   "author": "Eleni Papanicolas",
-  "main": "main.js",
+  "main": "server.ts",
   "scripts": {
     "test": "jest",
     "start:dev": "nodemon",
-    "build": "rimraf ./dist && tsc",
-    "start": "npm run build && node dist/main.js",
+    "build": "rimraf ./dist && tsc && esbuild server.js --bundle --platform=node --target=node10.4",
+    "start": "npm run build && node dist/server.js",
     "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "lint": "eslint . --ext .ts"
   },
@@ -23,10 +23,15 @@
   },
   "homepage": "https://github.com/e-papanicolas/OOD-w-typescript#readme",
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
     "@types/jest": "^28.1.8",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.7.13",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
+    "esbuild": "^0.15.6",
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -37,5 +42,11 @@
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "mongoose": "^6.5.4"
   }
 }
