--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "outDir": "dist",
+    "resolveJsonModule": true,
     "baseUrl": ".",
+    "isolatedModules": true,
     "paths": {
       "*": ["node_modules/*", "src/types/*"]
     }
