--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: app-backend-container
     build: .
     environment:
-      - MONGO_URI=mongodb+srv://eleni_papanicolas:yRXgWBON1n6eJlcLbCBi@cluster0.3quwk.mongodb.net/?retryWrites=true&w=majority
+      - MONGO_URI=${MONGO_URI}
     ports:
       - 8990:8990
 
