--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3.1'
 
 services:
-  app:
-    container_name: app-backend-container
+  server:
+    container_name: server
     build: .
     environment:
       - MONGO_URI=${MONGO_URI}
@@ -10,7 +10,7 @@ services:
       - 8990:8990
 
   db:
-    container_name: app-mongoDB-container
+    container_name: mongo-db
     image: mongo:latest
     restart: always
     volumes:
