--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.1'
-
 services:
   server:
     container_name: server
@@ -11,7 +9,7 @@ services:
 
   db:
     container_name: mongo-db
-    image: mongo:latest
+    image: mongo-db
     restart: always
     volumes:
       - ./appData:/data/db
